# SimpleLogger

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Program to find sum of digits of number  README.md  SimpLogConfig.h.in  backtrace-symbols.c  backtrace-symbols.h  build.sh  log.c  log.h  simplog.c  simplog.h
